...
                                    <constraint firstAttribute="width" secondItem="eOj-jd-Fbw" secondAttribute="height" multiplier="1:1" id="UDZ-zn-Dr3"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R5P-OT-xKy" userLabel="Login Button">
                                <rect key="frame" x="16" y="640" width="343" height="48"/>
                                <color key="backgroundColor" name="YP White (iOS)"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authorize"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="b2B-tl-e6q"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войти">
...
                                <connections>
                                    <outlet property="delegate" destination="4Fy-Dz-mSP" id="8Ii-GB-rRp"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iHQ-7K-UDj" userLabel="Back Button">
                                <rect key="frame" x="0.0" y="47" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="Back"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="nOV-oX-SId"/>
                                    <constraint firstAttribute="width" secondItem="iHQ-7K-UDj" secondAttribute="height" multiplier="1:1" id="v6Q-YT-B90"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="White Back Button"/>
...
