...
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        webView.navigationDelegate = self
        webView.accessibilityIdentifier = "LoginPage"
        
        presenter?.viewDidLoad()
        observeWebViewEstimatedProgress()
    }
    
    func load(by request: URLRequest) {
...
